[project]
name = "sagago-backend"
version = "1.0.0"
description = "SagaGo Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-dotenv",
    "requests",
    "bcrypt",
    "python-jose",
    "passlib",
    "python-multipart",
    "email-validator",
    "pillow",
    "groq",
    "langchain-core",
    "langchain-groq",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
